# terus-platform

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_RULES.md  README-TECHNICAL.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: health.py
apps/web/: .eslintrc.js  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/(marketing)/: layout.tsx  page.tsx
apps/web/components/conversion/: cta-buttons.tsx  sticky-demo-cta.tsx
apps/web/components/layout/: container.tsx  footer.tsx  navbar.tsx  terus-logo.tsx
apps/web/components/modules/: module-preview.tsx
apps/web/components/sections/: cases-results-section.tsx  companies-section.tsx  cta-section.tsx  ecosystem-section.tsx  educational-content-section.tsx  educational-videos-section.tsx  hero-dashboard-preview.tsx  hero-section.tsx  institutional-content-section.tsx  institutional-videos-section.tsx  integrations-ecosystem-section.tsx  module-card.tsx  (+12 more)
docs/: architecture.md  backend-foundation.md  current-phase.md  deployment-flow.md  project-roadmap.md  project-state.md  vercel.md
docs/architecture/: README.md
docs/assets/: README.md
docs/assets/presentations/: README.md
docs/decisions/: README.md
docs/releases/: release-checklist-v0.4.0.md  v0.4.0-executive-summary.md  v0.4.0-institutional-layer-complete.md
infra/docker/: .env.example  docker-compose.yml
(+22 files in other folders)
